# KTB4-Sian-AI

./: README.md
01/: README.md  todo.py
02/: README.md  database.py
02/migrations/versions/: 7c06900931fe_.py
1주차/: README.md
1주차/01/: README.md
2주차/: README.md
2주차/01/: README.md
2주차/02/: README.md
2주차/02/board/: board_crud.py  board_router.py
2주차/02/comment/: comment_crud.py  comment_schema.py
3주차/: 3주차_Numpy_미니퀘스트.ipynb  3주차_Pandas_미니퀘스트.ipynb  README.md
4주차/: 4주차_위클리 챌린지.ipynb  README.md
5주차/: README.md
5주차/Chatbot/: README.md
week1/: README.md
week2/02/: alembic.ini  main.py  models.py  pyproject.toml  sql02.db
week2/02/board/: board_schema.py
week2/02/comment/: comment_router.py
week2/02/migrations/versions/: 45d221848aa9_.py  7525e5b44531_.py
week3/: 3주차_데이터시각화_미니퀘스트.ipynb
week4/: README.md
week5/: 5주차_위클리챌린지(1~4번).ipynb  README.md
week5/Chatbot/: README.md  app.py  chat.py  dataset.py  fastapi.py  model.py  pyproject.toml  test.py  train.py  week5_05_chatbot.ipynb
week5/Chatbot/practice/: train_translation.py
week6/week6_miniproject/: README.md  app.py  generation.py  indexing.py  main.py  pyproject.toml
week7/: .gitignore  README.md  app.py  dataset.py  main.py  pyproject.toml
week7/chroma_db/: chroma.sqlite3
week7/langchainfile/: eval.py  rag.py
week7/sian-til/: 260521 TIL.md  260523.md  260530 TIL - Deepdive.md  260617 TIL.md
