[project]
name = "week6-miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
